# nsgt

./: README.md  conda-env-CPU.yml  pyproject.toml  setup.py  setup_cpu.sh
examples/: transform_audio.py
nsgt/: audio.py  cq.py  nsigtf.py
workspace/: example.sh  workbook.ipynb
