[build-system]
requires = [
    "cython",
    "oldest-supported-numpy",
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
name = "nsgt"
description = "Python implementation of Non-Stationary Gabor Transform (NSGT)"
authors = [
    { name = "Thomas Grill", email = "gr@grrrr.org" },
]
maintainers = [
    { name = "Thomas Grill", email = "gr@grrrr.org" },
]
license = { text = "Artistic License" }
readme = "readme.txt"

classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: Artistic License",
    "Programming Language :: Python",
]

requires-python = ">=3.7, <4"
dependencies = [
    "numpy",
]

keywords = [
    "fourier",
    "gabor",
]

version = "0.19"

[project.urls]
"Source Code" = "http://grrrr.org/nsgt"

[project.optional-dependencies]
optional = [
    "h5py",
    "matplotlib",
    "pyfftw",
    "scipy",
]
# note: to use pysndfile, libsndfile must have been previously installed
pysndfile = [
    "pysndfile"
]

[tools.setuptools]
license-file = [ "LICENSE" ]

[tools.setuptools.packages.find]
include = [
    "nsgt*",
]
